# gerrit_helper

./: CMakeLists.txt  README.md  main.cpp
include/: common_macros.hpp  gerrit_helper.hpp  utils.hpp
src/: CMakeLists.txt  gerrit_helper.cpp  utils.cpp
